# deepfa

./: README.md  pyproject.toml
assets/: caviar_checkpoint.pt  caviar_video.mov  symbol_grounder_weights.pt
deepfa/: automaton.py  utils.py
tests/: __init__.py  nesy.py  test_categorical.py  test_tlf.py
